--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Kotlin玩android</string>
+
+    <string name="s_home">首页</string>
+    <string name="s_project">项目</string>
+    <string name="s_tencent">公众号</string>
+    <string name="s_ground">广场</string>
+    <string name="s_me">我</string>
+    <string name="s_top">置顶</string>
 </resources>
