主页tab替换问答

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="s_home">首页</string>
     <string name="s_project">项目</string>
     <string name="s_tencent">公众号</string>
+    <string name="s_answer">问答</string>
     <string name="s_ground">广场</string>
     <string name="s_me">我</string>
     <string name="s_top">置顶</string>
